    a FunctionAction's signature:
      - literal values referenced by the byte code.
      - values of default arguments
      - code of nested functions
      - values of variables captured by closures
      - names of referenced global variables and functions

  - Fix the closing message when --clean and --keep-going are both
    used and no errors occur.

  From Jérôme Berger:

  - Have the D language scanner search for .di files as well as .d files.

  - Add a find_include_names() method to the Scanner.Classic class to
    abstract out how included names can be generated by subclasses.

  - Allow the D language scanner to detect multiple modules imported by
    a single statement.

  From Konstantin Bozhikov:

  - Support expansion of construction variables that contain or refer
    to lists of other variables or Nodes within expansions like $PCPPATH.

  - Change variable substitution (the env.subst() method) so that an
    input sequence (list or tuple) is preserved as a list in the output.

  From David Cournapeau:

  - Add a CheckDeclaration() call to configure contexts.

  - Improve the CheckTypeSize() code.

  - Add a Define() call to configure contexts, to add arbitrary #define
    lines to a generated configure header file.

  - Add a "gfortran" Tool module for the GNU F95/F2003 compiler.

  - Avoid use of -rpath with the Mac OS X linker.

  From Steven Knight:

  - Support the ability to subclass the new-style "str" class as input
    to Builders.

  - Improve the performance of our type-checking by using isinstance()
    with new-style classes.

  - Fix #include (and other $*PATH variables searches) of files with
    absolute path names.  Don't die if they don't exist (due to being
    #ifdef'ed out or the like).

  - Fix --interactive mode when Default(None) is used.

  From Rob Managan:

  - Enhance TeX and LaTeX support to work with BuildDir(duplicate=0).

  - Re-run LaTeX when it issues a package warning that it must be re-run.
